Se agrega manejo de relaciones grupo-estudiantes y grupo-evaluadores.
