# Messages/Response/EstudianteResponses.go
@@ -56,3 +56,7 @@ type DeleteEstudianteResponse struct {
 type PutMyEstudianteResponse struct {
 	Id uuid.UUID `json:"id"`
 }
+
+type AddEstudianteToGrupoResponse struct {
+	Id uuid.UUID `json:"id"`
+}
